k8s/web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: demo
spec:
  replicas: 1  # You can scale this if needed
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web-app
          image: web-app:v1
          ports:
            - containerPort: 5000
