k8s/web/we-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-container
        image: 654654348225.dkr.ecr.us-east-2.amazonaws.com/web-app:7
        ports:
        - containerPort: 5000
