k8s/web/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: demo
spec:
  replicas: 1  # You can scale this if needed
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web-app
          image: 654654348225.dkr.ecr.us-east-2.amazonaws.com/web-app:12
          ports:
            - containerPort: 5000
