k8s/web/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flaskapi-service
  namespace: demo
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
