k8s/web/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: demo
spec:
  ingressClassName: external-nginx 
  rules:
    - http:
        paths:
          - path: /  
            pathType: Prefix
            backend:
              service:
                name: flaskapi-service
                port:
                  number: 5000
